tests/NormalTests/paczka1/small_fuzzy/77889760.err
Error in line 1: S328 S816 3,40
Error in line 6: S328 S816 36,0
